--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ducati1224.github.io",
+  "homepage": "https://ducati1224.github.io/robofriends",
   "dependencies": {
     "gh-pages": "^2.1.0",
     "react": "^16.8.6",
