--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages --git https://github.com/ducati1224/robofriends.git -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
